# KWG-Expert-RAG

./: README.md  fetch-data.py  main.py  pyproject.toml
